# GeorgianaDeliu

./: Actor.cpp  Actor.h  AdminUser.cpp  AdminUser.h  CMakeLists.txt  Category.cpp  Category.h  Class_Actors.cpp  Class_Category.cpp  Class_Media_Item.cpp  Class_Media_Item.h  Class_User.cpp  Class_User.h  Class_WatchList.cpp  ComedyCategory.cpp  ComedyCategory.h  Command.cpp  Command.h  ConcreteObserver.cpp  ConcreteObserver.h  DramaCategory.cpp  DramaCategory.h  FavoritesWatchlist.cpp  FavoritesWatchlist.h  GuestActor.cpp  GuestActor.h  GuestUser.cpp  GuestUser.h  LeadActor.cpp  LeadActor.h  MediaFactory.h  MediaItem.cpp  MediaItem.h  Menu.cpp  Menu.h  Movie.cpp  Movie.h  Observer.cpp  Observer.h  PremiumUser.cpp  (+25 more)
.github/actions/cppcheck/: action.yml
.github/actions/runtime-checks/: run-checks.sh
.github/workflows/: cmake.yml
scripts/: build_cppcheck.sh  run_cppcheck.sh
